# Fintech_project

./: .gitignore  MainApp.py  README.md  REPORT.md  pyproject.toml  requirements.txt  run_app.bat
analysis/: 03_eda_analysis.py
data/: finbankiq_analytics.db
etl/: 01_etl_pipeline.py
scripts/: 01_etl_pipeline.py  02_eda_analysis.py  03_predictive_models.py  sql_analytics_queries.sql
sql/: 02_sql_queries.py
utils/: config.py
