[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finbankiq-analytics"
version = "1.0.0"
description = "End-to-End Blockchain Intelligence for Asset Health & Risk Assessment"

readme = "README.md"

requires-python = ">=3.9"



dependencies = [
    # Core Data Processing
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    
    # Database & SQL
    "sqlalchemy>=2.0.0,<3.0.0",
    
    # HTTP Requests & Data Fetching
    "requests>=2.28.0,<3.0.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0,<2.0.0",
    "joblib>=1.3.0,<2.0.0",
    
    # Data Visualization
    "matplotlib>=3.6.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    
    # Jupyter & Interactive Analysis (optional)
    "jupyter>=1.0.0,<2.0.0",
    "ipykernel>=6.25.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "black>=23.0.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
]
ml-advanced = [
    "xgboost>=1.7.0,<2.0.0",
    "lightgbm>=4.0.0,<5.0.0",
    "catboost>=1.2.0,<2.0.0",
    "optuna>=3.2.0,<4.0.0",
]
deep-learning = [
    "torch>=2.0.0,<3.0.0",
    "tensorflow>=2.13.0,<3.0.0",
    "transformers>=4.30.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/finbankiq/analytics-platform"
Documentation = "https://finbankiq.readthedocs.io"
Repository = "https://github.com/finbankiq/analytics-platform.git"
"Bug Tracker" = "https://github.com/finbankiq/analytics-platform/issues"

[project.scripts]
finbankiq-etl = "etl.01_etl_pipeline:main"
finbankiq-analyze = "analysis.03_eda_analysis:main"
finbankiq-predict = "scripts.04_predictive_models:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["etl", "analysis", "sql", "utils", "scripts"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/codici_irene/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["etl", "analysis", "sql", "utils", "scripts"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "TCH", "TID", "TCH", "ARG", "PIE", "LOG", "PTH"]
ignore = ["E501", "B008", "C901", "PLR0913", "PLR0915"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["PLR2004"]